workdir/source/k8s-manifests/whatcheese/11-whatcheese-db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatcheese-db
  namespace: cheese-demo
  labels:
    app: whatcheese-db
spec:
  selector:
    matchLabels:
      app: whatcheese-db
  replicas: 1
  template:
    metadata:
      labels:
        app: whatcheese-db
    spec:
      containers:
      - name: whatcheese-db
        image: tuxinvader/whatcheese-db:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: whatcheese-db
  namespace: cheese-demo
spec:
  selector:
    app: whatcheese-db
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
