workdir/source/k8s-manifests/whatcheese/15-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-whatcheese-web-ingress
  namespace: cheese-demo
  annotations:
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-policy: "nginx-ingress/dataguard-blocking"
    nginx.org/lb-method: "round_robin"
spec:
  rules:
  - host: "www.ws01.nginxdemo.net"
    http:
      paths:
      - path: /
        backend:
          serviceName: whatcheese-web-v2
          servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-whatcheese-web-ingress
  namespace: cheese-demo
  annotations:
    #custom.nginx.org/oidc:  "on"
spec:
  rules:
  - host: "api.ws01.nginxdemo.net"
    http:
      paths:
      - path: /
        backend:
          serviceName: whatcheese-api
          servicePort: 80
